<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".PROFILE"
    tools:showIn="@layout/activity_profile">

    <de.hdodenhof.circleimageview.CircleImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@color/background"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:id="@+id/circle_profile"
        android:src="@drawable/profile"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <LinearLayout
        android:id="@+id/linear_container"
        android:layout_width="395dp"
        android:layout_height="359dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="8dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/circle_profile">

        <TextView
            android:id="@+id/name"
            android:layout_width="match_parent"
            android:layout_marginStart="80dp"
            android:layout_marginTop="10dp"
            android:textSize="33sp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/name" />

        <LinearLayout
            android:id="@+id/track_layout"
            android:layout_marginTop="@dimen/layout_spacing"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginStart="16dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/track_name"
                style="@style/profile_button"
                android:layout_width="wrap_content"
                android:layout_marginLeft="16dip"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/track" />

            <TextView
                android:id="@+id/track"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="3"
                android:text="@string/track_name" />
        </LinearLayout>
        <LinearLayout
            android:id="@+id/country_layout"
            android:layout_marginLeft="16dip"
            android:layout_width="match_parent"
            android:layout_marginTop="@dimen/layout_spacing"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/country"
                style="@style/profile_button"
                android:layout_width="wrap_content"
                android:layout_marginLeft="16dip"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/Country" />

            <TextView
                android:id="@+id/mycountry"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="3"
                android:text="@string/Mycountry" />
        </LinearLayout>
        <LinearLayout
            android:id="@+id/layout_email"
            android:layout_width="match_parent"
            android:layout_marginTop="@dimen/layout_spacing"
            android:layout_marginLeft="16dip"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/email"
                style="@style/profile_button"
                android:layout_marginLeft="16dip"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/Email" />

            <TextView
                android:id="@+id/myEmail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="3"
                android:text="@string/MyEmail" />
        </LinearLayout>
        <LinearLayout
            android:id="@+id/track_number"
            android:layout_marginLeft="16dip"
            android:layout_marginTop="@dimen/layout_spacing"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/phone"
                style="@style/profile_button"
                android:layout_marginLeft="16dip"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/Phone_number" />

            <TextView
                android:id="@+id/myphone"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="3"
                android:text="@string/mynumber" />
        </LinearLayout>
        <LinearLayout
            android:id="@+id/track_username"
            android:layout_width="match_parent"
            android:layout_marginTop="@dimen/layout_spacing"
            android:layout_marginLeft="16dip"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/username"
                style="@style/profile_button"
                android:layout_marginLeft="16dip"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/username" />

            <TextView
                android:id="@+id/myusername"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/Slack_username" />
        </LinearLayout>
    </LinearLayout>

</android.support.constraint.ConstraintLayout>
